--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,8 @@ extends layout
 block content
   div.row-fluid
     div.span6
-      img(src=imageUrl, class='image')
+      a(href=imageUrl, target='_blank')
+        img(src=imageUrl, class='image')
     div.span6
       div.row-fluid
         div.span12
